--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
+    "date-fns": "^4.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
