--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.10",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
