バグ修正: テーマトグル機能の修正とツイート投稿機能の実装

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,1 +1,10 @@
-{ "rules": { "@typescript-eslint/no-var-requires": "off" } }
+{
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@typescript-eslint/no-var-requires": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  }
+}
