--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.4.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
